--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -528,7 +528,7 @@ Label form:
    | Present State | Next State (x=0) | Next State (x=1) | Output |
    | ------------- | ---------------- | ---------------- | ------ |
    | A             | A                | B                | 0      |
-| B             | A                | C                | 0      |
+   | B             | A                | C                | 0      |
    | C             | D                | C                | 0      |
    | D             | A                | E                | 0      |
    | E             | A                | C                | **1**  |
@@ -597,13 +597,18 @@ Label form:
 
 ### Appendix
 
+* t~w~: clock pulse width
+* t~p**~: propa-gation delay
+  * t~pd~ = max(t~PHL~,t~PLH~)
+
 * **t~s~与t~h~**
   * 建立(Setup)时间(t~s~)：时钟沿到来前输入数据D必须要稳定的时间
   * 保持(Hold)时间(t~h~)：时钟沿到来后输入数据D必须要稳定的时间
 * **时序电路正确工作所要求的最小时钟周期T为：T>t~Latch~+t~circuit~+t~s~**
 
-* 主从触发器与边缘触发器
-  * 主从式SR触发器在整个clk为H器件的输出都依赖与输入
+* ~~主从触发器与边缘触发器~~
+  * ~~主从式SR触发器在整个clk为H器件的输出都依赖与输入~~
+  * 看上面的吧
 
 ### 其他触发器
 
@@ -669,6 +674,15 @@ graph LR
 2. 对寄存器中存储数据执行的操作
 3. 系统中操作执行顺序的控制
 
+Control of Register Transfers (传输状态机:RSM)
+* Register transfers performed on registers Control that supervises the
+
+Three essential elements
+* Set of registers: mostly in Datapath with some in Control Unit
+* Basic operation (micromanipulation): Register transfers performed
+* Control: that supervises the sequencing of the register transfers
+ 
+
 ### 微操作(microoperation)
 
 **基本操作**
@@ -681,10 +695,10 @@ graph LR
 
 | Arithmetic operations | Logical operations (BITWISE)    | Shift operations          |
 | --------------------- | ------------------------------- | ------------------------- |
-| + Addition            | $R_0 \leftarrow R_1 \vee R_2$    | $R_0 \leftarrow$ sr $R_0$ |
+| + Addition | $R_0 \leftarrow R_1 \vee R_2$    | $R_0 \leftarrow$ sr $R_0$ |
 | – Subtraction: $R_0 \leftarrow R_1 + \overline{R_2} + 1$ | $R_0 \leftarrow R_1 \wedge R_2$   | $R_0 \leftarrow$ sl $R_1$ |
-| * Multiplication      | $R_0 \leftarrow R_1 \oplus R_2$ |                           |
-| / Division            | $R_0 \leftarrow \overline R_1$  |                           |
+| * Multiplication | $R_0 \leftarrow R_1 \oplus R_2$ |   |
+| / Division | $R_0 \leftarrow \overline R_1$  | |
 
 ### 对单个寄存器的微操作、计数器初步
 
@@ -723,6 +737,7 @@ graph LR
     * 行波异步是C来自上一个的Qn，D直接接自己的Qn
     * 串行同步是C接共用clk，D来自上一个寄存器的Q与自己的Q的异或(XOR保证了00->01->10->11->00->...)
 * 并行
+  * 图中的C输出指的是CarryOut，连到D触发器D端口；Q就是对应的D触发器的返回
   * 相对串行的优点：1111到0000只需一个门的延时，串行要四个
   * 串联多个并行同步计数器的方式 可以有效拓展位数并且时延相对较低
 
@@ -775,14 +790,14 @@ RST --> 000
 
 The following **techniques** use an n-bit binary counter with asynchronous or synchronous clear and/or parallel load:
 
-1. Detect a terminal count of N in a Modulo-N count sequence to asynchronously Clear the count to 0 or asynchronously Load in value 0 (These lead to counts which are present for only a very short time and can fail to work for some timing conditions!)(检测出终止状态N然后(在不到一个clk的时间)用异步清零或者加载零)
+1. ~~Detect a terminal count of N in a Modulo-N count sequence to asynchronously Clear the count to 0 or asynchronously Load in value 0 (These lead to counts which are present for only a very short time and can fail to work for some timing conditions!)(检测出终止状态N然后(在不到一个clk的时间)用异步清零或者加载零)~~ 不建议使用
 2. Detect a terminal count of N - 1 in a Modulo-N count sequence to Clear the count synchronously to 0(检测到N-1然后同步清零)
 3. Detect a terminal count of N - 1 in a Modulo-N count sequence to synchronously Load in value 0(检测到N-1然后同步加载零)
 4. Detect a terminal count and use Load to preset a count of the terminal count value minus (N - 1)(终止状态减掉N-1)
 
 **举例**：
 
-1. 对于一个模三计数器，用第一种方法，则状态是：$0\xrightarrow{clk}1\xrightarrow{clk}2\xrightarrow{clk}3\xrightarrow{t \ll clk}0\xrightarrow{clk}...$ 强烈建议：**DON’T DO THIS!** 由于是异步清零，可能N存在的时间不够长，导致清零只清了一半
+1. 对于一个模3计数器，用第一种方法，则状态是：$0\xrightarrow{clk}1\xrightarrow{clk}2\xrightarrow{clk}3\xrightarrow{t \ll clk}0\xrightarrow{clk}...$ 强烈建议：**DON’T DO THIS!** 由于是异步清零，可能N存在的时间不够长，导致清零只清了一半
 2. 对于一个模7计数器，用第三种方法，则可以让`Load=Q2*Q1` (Q2\*Q1\*Q0来不及出现所以不用写成minimun)，然后
 
 ### 寄存器单元(reg cell)设计
@@ -794,9 +809,9 @@ The following **techniques** use an n-bit binary counter with asynchronous or sy
 举例1：
 
 对于以下寄存器操作：
-* AND: $A\leftarrow A \wedge B$
-* EXOR:$A\leftarrow A \oplus B$
-* OR:  $A\leftarrow A \vee B$
+* AND:  $A\leftarrow A \wedge B$
+* EXOR: $A\leftarrow A \oplus B$
+* OR:   $A\leftarrow A \vee B$
 
 获得表达式Di = A(t+1)i = AND\*AiBi + EXOR\*(Ai\~Bi + \~AiBi) + OR*(Ai+Bi)
 
