--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -329,3 +329,55 @@ Premise：晶体具有各向异性(Optically anisotropic)
 * $A_{e2} = A_{e1}\cos\alpha = A\cos^2\alpha$
 * $A_{o2} = A_{o1}\sin\alpha = A\sin^2\alpha$
 * $\Delta\varphi_\Vert = \frac{2\pi}{\lambda}|n_e-n_o| d$
+
+## 近代物理
+
+### Ch38
+
+* 单色辐射出射度：$R_\lambda(T) = \frac{dR_\lambda}{d\lambda}{}$
+* 辐射出射度：$R(T)$
+* 辐射率：$\varepsilon_\lambda$
+* 吸收率：$A_\varepsilon$
+
+Kirchhoff’s Law: Thermodynamic Equilibrium $\Longleftrightarrow$ $\varepsilon_\lambda = A_\varepsilon$
+
+Stefan-Boltzmann Law：黑体的热辐射 $R_B(T) = \int R\lambda(T)d\lambda = \sigma T^4$
+
+Wien Displacement Law: $T\lambda_{m} = b$，$\lambda_{m}$为黑体辐射曲线的峰值
+
+普朗克量子假设公式略
+
+光电效应
+* cutoff f~0~ 截止频率
+* Stopping Potential 截止电压
+* 逸出功 A is work function
+* $h\nu = E_{km}+A \Longrightarrow U_a = \frac{h}{e}\nu - \frac{A}{e}{}$
+
+光量子
+* 动质量：$m = \frac{E}{c^2} = \frac{h\nu}{c^2}{}$
+* 静质量：$m_0 = m \sqrt{1-\frac{v^2}{c^2}} = 0$
+* 动量：$p = mc = \frac{h\nu}{c} = \frac{h}{\lambda}{}$
+
+The Compton Effect
+* 新的一个intensity peak在$\lambda'$
+* $\Delta\lambda = \lambda'-\lambda_0$对同一个散射角$\varphi$的不同物质都相同
+* $\lambda'$的intensity随物质原子量的增大而减小
+* $\Delta\lambda$随$\varepsilon$的增大而增大
+
+Compton’s analysis
+* $\Delta\lambda = \frac{2h}{m_0c}\sin^2\frac{\varphi}{2}{}$，其中$m_0$为电子的静质量
+* 可见仅与散射角有关
+* 其中称$\lambda_c = \frac{h}{m_0c} = 0.00243nm$为电子的康普顿波长，等于散射角为$90^\circ$方向上散射光与入射光的波长差
+
+物质波
+* $\nu = \frac{mc^2}{h} = \frac{m_0c^2}{h\sqrt{1-v^2/c^2}}$
+* $p=\frac{h}{\lambda} \Longrightarrow \lambda = \frac{h}{mv} = \frac{h}{m_0v}\sqrt{1-v^2/c^2}{} \xlongequal{v \ll c} \frac{h}{m_0v}{}$，称为德布罗意关系式
+* Davisson-Germer: $\begin{cases} 实验值： & 2d\sin \theta = k\lambda(\theta = 90^\circ-50^\circ/2 = 65^\circ;d=0.091nm)\Rightarrow \lambda = 0.165nm \\ 理论值： & \lambda = \frac{h}{\sqrt{2eUm_0}} = 0.167nm \end{cases}{}$
+
+不确定性
+* 海森堡不确定性关系：$\Delta x \Delta p_x \geqslant \frac{h}{4\pi}{}$
+* 能量和时间的不确定性关系：$\Delta E \Delta t \geqslant \frac{h}{4\pi}{}$
+  * 例如受激发的原子在某一能级的平均寿命为Δt，该能级能量的不确定范围ΔE称为该激发态能级的自然宽度
+
+波函数
+略
