--- a/生命科学理论课笔记.md
+++ b/生命科学理论课笔记.md
@@ -276,3 +276,16 @@ Allen规律：四肢、尾巴和外耳在低温下变小变短。增加毛或羽
 
 **海洋生物的分布格局**
 
+
+
+
+
+# Dec23
+
+唐建军的达尔文：==生物同宗 自然选择== 不是：~~物竞天择 适者生存~~
+
+
+
+Nothing in biology make sense, except the light of evolution
+
+> in the light of 从。。。的角度
