--- a/GP/普物2笔记_光量.md
+++ b/GP/普物2笔记_光量.md
@@ -380,4 +380,39 @@ Compton’s analysis
   * 例如受激发的原子在某一能级的平均寿命为Δt，该能级能量的不确定范围ΔE称为该激发态能级的自然宽度
 
 波函数
-略
+略，其实不知道他物理意义 但是当做是概率的根号就行了
+
+### Ch39
+
+#### 薛定谔方程
+
+Premise
+* $\begin{cases} \Psi(x,t) = \psi_0 e^{i(kx-\omega t)} \\ \Psi^*(x,t) = \psi_0^* e^{-i(kx-\omega t)} \end{cases}{}$
+* $P(x) = |\Psi (x)|^2 = \Psi (x)\Psi^* (x)$
+* 归一性：概率积分和为1
+* 算符：$\begin{cases}i\hbar\frac{\partial}{\partial t} \cong E_总 \\ -i\hbar\frac{\partial}{\partial x} \cong p \\ -\frac{\hbar^2}{2m}\frac{\partial^2}{\partial x^2} \cong E_k \\ -\frac{\hbar^2}{2m}\frac{\partial^2}{\partial x^2} + U \cong H \end{cases}{}$
+
+**薛定谔方程**
+
+套入算符，得：$i\hbar \frac{\partial}{\partial t}\Psi(x,t) = [-\frac{\hbar ^2}{2m}(\frac{\partial^2}{\partial x^2}+\frac{\partial^2}{\partial y^2}+\frac{\partial^2}{\partial z^2})+U(x,t)] \Psi(x,t)$
+
+**定态薛定谔方程**
+
+势场不随时间变化，因此例子能量也不随时间变化
+
+$\Psi(x,t) = \psi(x) e^{-\frac{i}{h/2\pi}Et}{}$，其中\psi(x)为振幅函数
+
+结论式于大物P199
+
+**定态的一重要特征**：$|\Psi(r,t)|^2 = |\psi(r)|^2$
+
+#### 深势阱
+
+看大物书P201
+
+注意一下振幅的值 和 能量(离散)方程
+
+**零点能**：势阱中的粒子不可能绝对静止(即便是绝对零度)
+
+#### 谐振子
+
