--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -293,6 +293,8 @@ r's complement: (2^n^-1) - N + 1 = 2^n^ - N
 
 同步电路与异步电路
 
+最显著的差别就是**是否由同一个信号触发**。异步计数器进位信号是逐步传送的
+
 * Depends on the times at which:
   * storage elements observe their inputs, and
   * storage elements change their state 
@@ -378,8 +380,13 @@ D指的是Data
   * 步骤
     1. 在cp的高电平或低电平期间，输入信号先决定主触发器状态；
     2. cp下降沿或上升沿到来，主触发器状态原样转移给从触发器，表现为整个触发器的状态。转移过去的状态取决于cp的高电平或低电平期间所有的输入。
+  * 因此对于主从SR触发器，在cp高电平时应保持SR稳定
 * edge-triggered
   * 触发器状态仅仅取决于cp边沿到来那一瞬间的输入。
+
+<u>所以两者的状态方程相同，但边沿触发器更稳定。</u>
+
+==The edge-triggered D flip-flop is the same as the master- slave D flip-flop==
 
 二者的symbol不一样，见[Chap04_1.pdf](file:///Users/ulysses/Documents/%E5%A4%A7%E4%BA%8C%E4%B8%8A/%E6%95%B0%E9%80%BB/%E7%90%86%E8%AE%BA%20%E8%AF%BE%E4%BB%B6/Chap04_1.pdf)的Slide41
 
@@ -391,7 +398,8 @@ D指的是Data
 
 主要区别在于[]中的只有输出还是输入和输出都有
 
-* **Moore**：输出**只**依赖<u>当前</u>
+* **Moore**：输出**只**依赖<u>当前状态</u>
+  
   * Outputs are a function ONLY of states
   * 因此可以将输出与状态放在一个框里，(状态依然会随输入而改变，但是输出不会)
 * On circle with output included:
@@ -427,7 +435,7 @@ D指的是Data
   c --X=0--> a
   ```
   
-* **Mealy**：输出依赖<u>当前和输入</u>
+* **Mealy**：输出依赖<u>当前状态和输入</u>
 
   * Outputs are a function of inputs AND states
   * On directed arc with the output included:
@@ -681,7 +689,7 @@ Three essential elements
 * Set of registers: mostly in Datapath with some in Control Unit
 * Basic operation (micromanipulation): Register transfers performed
 * Control: that supervises the sequencing of the register transfers
- 
+
 
 ### 微操作(microoperation)
 
