--- a/GP/普物2笔记_光量.md
+++ b/GP/普物2笔记_光量.md
@@ -1,3 +1,5 @@
+[TOC]
+
 ## *Optics
 
 ### Ch34 Geometrical Opticals
@@ -330,9 +332,9 @@ Premise：晶体具有各向异性(Optically anisotropic)
 * $A_{o2} = A_{o1}\sin\alpha = A\sin^2\alpha$
 * $\Delta\varphi_\Vert = \frac{2\pi}{\lambda}|n_e-n_o| d$
 
-## 近代物理
+## \*近代物理
 
-### Ch38
+### Ch38 光Quanta与物质波
 
 * 单色辐射出射度：$R_\lambda(T) = \frac{dR_\lambda}{d\lambda}{}$
 * 辐射出射度：$R(T)$
@@ -382,7 +384,7 @@ Compton’s analysis
 波函数
 略，其实不知道他物理意义 但是当做是概率的根号就行了
 
-### Ch39
+### Ch39 Schrödinger & Hydrogen
 
 #### 薛定谔方程
 
@@ -410,9 +412,57 @@ $\Psi(x,t) = \psi(x) e^{-\frac{i}{h/2\pi}Et}{}$，其中\psi(x)为振幅函数
 
 看大物书P201
 
-注意一下振幅的值 和 能量(离散)方程
+注意一下振幅的值 和 能量(离散)方程，并且由能量方程可以求出其能级数(量子数)
+
+$A = \sqrt{\frac{2}{L}}$
+
+$E_n = n^2 \frac{\pi^2\hbar^2}{2mL^2}{}$
+
+驻波波长$\lambda_n = \frac{2L}{n}{}$
 
 **零点能**：势阱中的粒子不可能绝对静止(即便是绝对零度)
 
+**量子隧穿**
+
+$T = \exp(-\frac{2}{\hbar}L\sqrt{2m(U_0-E)})$
+
 #### 谐振子
+
+$E_n = (n + \frac{1}{2}) \hbar\omega = (n + \frac{1}{2}) h\nu$，零点能$E_0 = \frac{1}{2} \hbar\omega = \frac{1}{2} h\nu$
+
+#### 氢原子光谱解释
+
+**推广的巴尔末公式**
+
+从n级跃迁到k级的波数(1/λ)符合$\frac{1}{\lambda} = R(\frac{1}{k^2} - \frac{1}{n^2})$，R为里德伯常数
+
+**玻尔氢原子理论的德布罗意解释**
+
+绕核电子形成的德布罗意波长为$\lambda = \frac{h}{mv}$，形成驻波条件为$\lambda = \frac{2\pi r}{n}{}$，联立得到$mvr = n\hbar$
+
+**玻尔半径**
+
+将上面的结果带入库仑定律公式，消去v得到$\begin{array}{ll}r_n = n^2\frac{\varepsilon_0 h^2}{\pi me^2} & n=1,2,3,...\end{array}{}$，特殊地，称n=1的轨道半径为玻尔半径
+
+**氢原子能量**
+
+$E = E_k - E_p = -\frac{1}{n^2}(\frac{me^4}{8\varepsilon_0^2h^2})\ n = 1,2,3,...$，将这些分立的<u>能量值</u>称为**能级**。特殊地，氢原子$E_1 = -13.6eV$
+
+另外显然可以获得$E_n = \frac{E_1}{n^2}{}$
+
+#### 量子力学描述
+
+**氢原子的定态薛定谔方程**
+
+
+
+**量子数**
+
+| 现象                              | 量子数                             | 意义 | 取值                             | Appendix                                              |
+| --------------------------------- | ---------------------------------- | ---- | -------------------------------- | ----------------------------------------------------- |
+|                                   | 主量子数<br />Principle QN         | 能级 | $n = 1, 2, 3, ...$               | 上面那个能量公式                                      |
+|                                   | 角量子数<br />Orbital Angular MQN  | 能层 | $l = 0, 1, ..., (n-1)$           | 第n个能级的电子绕核旋转角动量$L = \sqrt{l(l+1)}\hbar$ |
+| 空间量子化<br />Spacequantization | 磁量子数<br />Magnetic QN          | 轨道 | $m_l = 0, \pm1, \pm2,..., \pm l$ | $L_z = m_l\hbar$                                      |
+|                                   | 自旋量子数<br />Spin QN            |      | $s = \frac12$                    |                                                       |
+|                                   | 自旋磁量子数<br />Spin Magnetic QN | 自旋 | $m_s = \pm\frac12$               |                                                       |
 
