--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -925,3 +925,75 @@ EN=0输出Hi-Z，EN为1正常
 将两个n位待加数保存在两个n位移位寄存器中，用一位全加器按位加法运算，全加器的输出保存在一个D触发器中(连到D端口)，然后D触发器的输出作为下一位的全加器加法运算的进位输入
 
 <img src="数逻笔记.assets/image-20191215115541386.png" alt="image-20191215115541386" style="zoom:25%;" />
+
+## Ch7
+
+字是计算机一次处理数据的最大单位。
+
+1. CPU的寄存器的长度是一个字；
+2. CPU一个指令最多从内存中读取的数据量就是一个字；
+3. 最大的寻址空间，是2^字长（如果一个字是64位，那么最大的寻址空间就是2的64次方）。
+
+SRAM与DRAM优点对比
+
+* SRAM
+  * 易于使用
+  * 读写周期短
+  * 不需要刷新
+* DRAM
+  * 功耗低
+  * 容量大
+
+### SRAM
+
+**Coincident Selection**
+
+* 用n/2的sel控制行，n/2控制列，然后时分复用
+
+**Word Extension**
+
+<img src="数逻笔记.assets/image-20200101152728505.png" alt="image-20200101152728505" style="zoom:25%;" />
+
+* 低位地址线不变
+* 高位地址线连到译码器，译码器输出对应多个原RAM
+* 数据总线不变
+* 片选信号CS选择特定的RAM芯片(是cell上的引脚，接到译码器构成扩展芯片)
+
+**Bit Extension**
+
+<img src="数逻笔记.assets/image-20200101152748699.png" alt="image-20200101152748699" style="zoom:25%;" />
+
+* 地址线不变
+* 数据总线每一section对于原RAM
+
+### DRAM
+
+DRAM的位片结构与包含刷新逻辑的DRAM框图
+
+<img src="数逻笔记.assets/image-20200101142844601.png" alt="image-20200101142844601" style="zoom:25%;" /><img src="数逻笔记.assets/image-20200101142910845.png" alt="image-20200101142910845" style="zoom:25%;" />
+
+* 注意R/C选择器前面是有寄存器的，这是复用地址线的前提
+* 行地址加载信号(RAS)bar，列地址加载信号(CAS)bar，(这是用于读写而不是用于刷新的？)，实际时RAS由1变0，行地址传到行地址译码器，然后CAS由1变0，列地址传给列地址寄存器
+* 有个刷新控制器与刷新计数器
+  * 刷新计数器在 0 ~ 2^Nr^-1之间变化(注意不是按字计数的啊)
+
+**刷新方式**
+
+集中式刷新：在这刷新的时间中中，内存只用来刷新，阻塞一切存取操作，知道一次刷新完全完成。
+
+分散式刷新：在每个存取操作后绑定一个刷新操作。
+
+
+
+1. **RAS-only refresh.** A row address is placed on the address lines and RAS is changed to 0. In this case, the refresh addresses must be applied from outside the DRAM chip, typically by an IC called a DRAM controller.
+2. **CAS-before-RAS refresh.** The CAS is changed from 1 to 0 followed by a change from 1 to 0 on RAS. Additional refresh cycles can be performed by changing RAS without changing CAS. The refresh addresses for this case come from the refresh counter, which is incremented after the refresh for each cycle.
+3. **Hidden refresh.** Following a normal read or write, CAS is left at 0 and RAS is cycled, effectively performing a CAS-before-RAS refresh. During a hidden refresh, the output data from the prior read remains valid. Thus, the refresh is hidden. Unfortunately, the time taken by the hidden refresh is significant, so a subsequent read or write operation is delayed.
+
+**DRAM分类**
+
+|                                   |          |                                                              |
+| --------------------------------- | -------- | ------------------------------------------------------------ |
+| Synchronous DRAM                  | SDRAM    | Operates with a clock rather than being asynchronous. This permits a tighter interaction between memory and CPU, since the CPU knows exactly when the data will be available. SDRAM also takes advantage of the row value availability and divides memory into distinct banks, permitting overlapped accesses. |
+| Double-data-rate synchronous DRAM | DDR SDAM | The same as SDRAM except that data output is provided on both the negative and the positive clock edges. |
+| Rambus® DRAM                      | RDRAM    | A proprietary technology that provides very high memory access rates using a relatively narrow bus. |
+
