--- a/Assembly/19-11-20.md
+++ b/Assembly/19-11-20.md
@@ -1,5 +1,17 @@
 # Nov20
 
+CF ZF SF OF AF PF: 这6个称为状态标志
+DF TF IF: 这3个称为控制标志
+DF:direction flag
+TF:trace/trap flag
+IF:interrupt flag
+
+<img src="https://img-blog.csdn.net/20180626155457820?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM1ODIxOTg4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70" alt="" /><br /><img src="https://img-blog.csdn.net/20180626155536598?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM1ODIxOTg4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70" alt="" /><br /><img src="https://img-blog.csdn.net/20180626155556942?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM1ODIxOTg4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70" alt="" />
+
+
+
+
+
 **OF(overflow)**
 
 * 标志寄存器
@@ -26,6 +38,10 @@
   * 最后八位里1的个数是odd (包括校验位)
 * 偶校验
   * 最后八位里1的个数是even(包括校验位)
+
+
+
+==PF仅统计低八位中的奇偶个数==
 
 例如第一位作为校验位则有：1100 0001是对的，1100 0011是错的
 
@@ -87,6 +103,10 @@ daa ; ah = 20h
 |      |      |      |      |      |
 | ---- | ---- | ---- | ---- | ---- |
 | AF   |      |      |      |      |
+
+
+
+
 
 ## 控制标志寄存器
 
