--- a/Assembly/_汇编总结.md
+++ b/Assembly/_汇编总结.md
@@ -25,9 +25,11 @@
 ---
 
 扩充包括零扩充及符号扩充两种。
-原变量为非符号数，补0；
-原变量为符号数，补1；
-跟目标是否是符号数无关
+
+* 零扩充针对无符号数
+* 符号扩充针对符号数
+  * 原变量为正数，补0；
+  * 原变量为负数，补1；
 
 ---
 
@@ -54,7 +56,7 @@ int 10h; 切换到80*25文本模式
 
 ---
 
-**int 21h**
+**int 21h**(这是软件中断)
 
 ah = 1h：读入一个字符，存在AL(按回车则是0Dh而不是0Ah)
 
@@ -62,7 +64,11 @@ ah = 9h：输出首地址存在DX的'$'结尾的字符串
 
 ah = 2h：输出DL中单个字符
 
-ah=0ah：返回后第二个字节是实际读取字符数，不包括CR，但是第三位开始读进来的字符包括最后的CR(没有LF)
+ah = 0ah：返回后第二个字节是实际读取字符数，不包括CR，但是第三位开始读进来的字符包括最后的CR(没有LF)；调用时注意小端规则
+
+
+
+硬件中断包括`int 9h`键盘输入，`int 8h` CPU clk
 
 ---
 
@@ -169,3 +175,15 @@ video_addr dw 0000h, 0B800h, 160, 0B800h
 如上面那个是0006h而不是0600h
 
 ---
+
+移位操作
+
+sh若移动位数超过1位则必须将移动位数存在cl，`shl reg,cl`
+
+`rol`, `ror`是循环左右移
+
+---
+
+标志寄存器
+
+<img src="https://img-blog.csdn.net/20170505193752326?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvQXBvbGxvbl9rcmo=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast">
