--- a/GP/普物2笔记_光量.md
+++ b/GP/普物2笔记_光量.md
@@ -1,3 +1,4 @@
+<div align = "right"><b>Powered by CXY</b></div>
 [TOC]
 
 ## *Optics
@@ -16,15 +17,16 @@
 **公式**
 
 * $\displaystyle \frac{1}{v} + \frac{1}{u} = {\frac{1}{f}}$
+* 凹球面镜：$R = 2f$
 
 #### 折射
 
 <!--##### 符号规则-->
 
-<!--* 正透镜(聚透镜)焦距为正-->
-<!--* 负透镜(发散透镜)焦距为负-->
+* 正透镜(聚透镜)焦距为正
+* 负透镜(发散透镜)焦距为负
 
-##### Physics上的 Cartesian Sign Convention(**Refraction**)
+##### *Physics*上的 Cartesian Sign Convention(**Refraction**)
 
 **法则**
 
@@ -34,10 +36,10 @@
 
 **在这种坐标系下的公式有所改变**
 
-* $\displaystyle \frac{n_2}{v} - \frac{n_1}{u} = {\frac{n_2-n_1}{R}}$
-* $\displaystyle m = \frac{h_1}{h_0} = {\frac{n_1v}{n_2u}}$
-* $\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$
+* 单球面折射镜高斯公式：$\displaystyle \frac{n_2}{v} - \frac{n_1}{u} = {\frac{n_2-n_1}{R}}$
 * $\displaystyle \frac{1}{v} + \frac{1}{-u} = {\frac{1}{f}}$
+* 放大率：$\displaystyle m = \frac{h_1}{h_0} = {\frac{n_1v}{n_2u}}$
+* 磨镜者公式：$\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$
 
 #### 光学器材
 
@@ -47,7 +49,7 @@
 * **显微镜**
   * 放大率$M = m \times m_\theta = -(\frac{S}{f_0})(\frac{25cm}{f})$，其中m为物镜的横向放大率，m~θ~为目镜的角放大率
 * **望远镜**
-  * $m_0 = - {\frac{f_0}{f_e}}$，符号表示倒像
+  * $m_0 = - {\frac{f_0}{f_e}}$，负号表示倒像
 * **照相机**
 
 ### Ch36 Wave Optics-1 Interference 干涉
@@ -236,18 +238,17 @@ $\theta \approx \sin \theta = 1.22\frac{\lambda}{D}{}$，其中D(2R)为孔的直
 * 暗纹，极小(Minima)
   * 振幅矢量叠加形成闭合多边形
   * $N\Delta\varphi = \pm k'(2\pi), k' = 1,2,...$
-  * 注意，k'!=kN，但第k级主极大相邻两个主极小是kN-1与kN+1
+  * 注意，k'!=kN，但<u>第k级主极大相邻两个主极小是kN-1与kN+1</u>
   * N-1个
 * 次极大
   * 介于两个极小之间，由于振幅矢量叠加既不在一条直线(主极大)，又不形成闭合多边形(极小)造成
   * N-2个
 
-
 **布拉格方程**
 
 > 布拉格方程：对于X射线衍射，当光程差等于波长的整数倍时，晶面的散射线将加强，此时满足的条件为2dsinθ=nλ，其中，d为晶面间距，θ为入射线，反射线与反射晶面之间的夹角，λ为波长，n为反射级数，布拉格方程是X射线在晶体产生衍射时的必要条件而非充分条件。有些情况下晶体虽然满足布拉格方程，但不一定出现衍射，即所谓系统消光。
 
-注意：由此可知若入射光也存在倾角，则总光程差应连入射部分的光程差一起考虑
+==注意：由此可知若入射光也存在倾角，则总光程差应连入射部分的光程差一起考虑==
 
 **缺级**
 
@@ -332,6 +333,8 @@ Premise：晶体具有各向异性(Optically anisotropic)
 * $A_{o2} = A_{o1}\sin\alpha = A\sin^2\alpha$
 * $\Delta\varphi_\Vert = \frac{2\pi}{\lambda}|n_e-n_o| d$
 
+
+
 ## \*近代物理
 
 ### Ch38 光Quanta与物质波
@@ -347,42 +350,66 @@ Stefan-Boltzmann Law：黑体的热辐射 $R_B(T) = \int R\lambda(T)d\lambda = \
 
 Wien Displacement Law: $T\lambda_{m} = b$，$\lambda_{m}$为黑体辐射曲线的峰值
 
-普朗克量子假设公式略
 
-光电效应
+
+**普朗克量子假设公式略**
+
+
+
+**光电效应**
+
 * cutoff f~0~ 截止频率
 * Stopping Potential 截止电压
 * 逸出功 A is work function
 * $h\nu = E_{km}+A \Longrightarrow U_a = \frac{h}{e}\nu - \frac{A}{e}{}$
 
-光量子
+
+
+**光量子**
+
 * 动质量：$m = \frac{E}{c^2} = \frac{h\nu}{c^2}{}$
 * 静质量：$m_0 = m \sqrt{1-\frac{v^2}{c^2}} = 0$
 * 动量：$p = mc = \frac{h\nu}{c} = \frac{h}{\lambda}{}$
 
-The Compton Effect
+
+
+**The Compton Effect**
+
 * 新的一个intensity peak在$\lambda'$
 * $\Delta\lambda = \lambda'-\lambda_0$对同一个散射角$\varphi$的不同物质都相同
 * $\lambda'$的intensity随物质原子量的增大而减小
 * $\Delta\lambda$随$\varepsilon$的增大而增大
 
-Compton’s analysis
+
+
+**Compton’s analysis**
+
 * $\Delta\lambda = \frac{2h}{m_0c}\sin^2\frac{\varphi}{2}{}$，其中$m_0$为电子的静质量
 * 可见仅与散射角有关
 * 其中称$\lambda_c = \frac{h}{m_0c} = 0.00243nm$为电子的康普顿波长，等于散射角为$90^\circ$方向上散射光与入射光的波长差
 
-物质波
+
+
+**物质波**
+
 * $\nu = \frac{mc^2}{h} = \frac{m_0c^2}{h\sqrt{1-v^2/c^2}}$
 * $p=\frac{h}{\lambda} \Longrightarrow \lambda = \frac{h}{mv} = \frac{h}{m_0v}\sqrt{1-v^2/c^2}{} \xlongequal{v \ll c} \frac{h}{m_0v}{}$，称为德布罗意关系式
 * Davisson-Germer: $\begin{cases} 实验值： & 2d\sin \theta = k\lambda(\theta = 90^\circ-50^\circ/2 = 65^\circ;d=0.091nm)\Rightarrow \lambda = 0.165nm \\ 理论值： & \lambda = \frac{h}{\sqrt{2eUm_0}} = 0.167nm \end{cases}{}$
 
-不确定性
+
+
+**不确定性**
+
 * 海森堡不确定性关系：$\Delta x \Delta p_x \geqslant \frac{h}{4\pi}{}$
 * 能量和时间的不确定性关系：$\Delta E \Delta t \geqslant \frac{h}{4\pi}{}$
   * 例如受激发的原子在某一能级的平均寿命为Δt，该能级能量的不确定范围ΔE称为该激发态能级的自然宽度
 
-波函数
+
+
+**波函数**
 略，其实不知道他物理意义 但是当做是概率的根号就行了
+
+
 
 ### Ch39 Schrödinger & Hydrogen
 
@@ -398,6 +425,8 @@ Premise
 
 套入算符，得：$i\hbar \frac{\partial}{\partial t}\Psi(x,t) = [-\frac{\hbar ^2}{2m}(\frac{\partial^2}{\partial x^2}+\frac{\partial^2}{\partial y^2}+\frac{\partial^2}{\partial z^2})+U(x,t)] \Psi(x,t)$
 
+
+
 **定态薛定谔方程**
 
 势场不随时间变化，因此例子能量也不随时间变化
@@ -406,7 +435,11 @@ $\Psi(x,t) = \psi(x) e^{-\frac{i}{h/2\pi}Et}{}$，其中\psi(x)为振幅函数
 
 结论式于大物P199
 
+
+
 **定态的一重要特征**：$|\Psi(r,t)|^2 = |\psi(r)|^2$
+
+
 
 #### 深势阱
 
@@ -420,11 +453,17 @@ $E_n = n^2 \frac{\pi^2\hbar^2}{2mL^2}{}$
 
 驻波波长$\lambda_n = \frac{2L}{n}{}$
 
+
+
 **零点能**：势阱中的粒子不可能绝对静止(即便是绝对零度)
+
+
 
 **量子隧穿**
 
-$T = \exp(-\frac{2}{\hbar}L\sqrt{2m(U_0-E)})$
+$T = \exp(-\frac{2}{\hbar}L\sqrt{2m(U_0-E)})$(光强正比于振幅的平方)
+
+
 
 #### 谐振子
 
@@ -436,33 +475,53 @@ $E_n = (n + \frac{1}{2}) \hbar\omega = (n + \frac{1}{2}) h\nu$，零点能$E_0 =
 
 从n级跃迁到k级的波数(1/λ)符合$\frac{1}{\lambda} = R(\frac{1}{k^2} - \frac{1}{n^2})$，R为里德伯常数
 
+
+
 **玻尔氢原子理论的德布罗意解释**
 
 绕核电子形成的德布罗意波长为$\lambda = \frac{h}{mv}$，形成驻波条件为$\lambda = \frac{2\pi r}{n}{}$，联立得到$mvr = n\hbar$
+
+
 
 **玻尔半径**
 
 将上面的结果带入库仑定律公式，消去v得到$\begin{array}{ll}r_n = n^2\frac{\varepsilon_0 h^2}{\pi me^2} & n=1,2,3,...\end{array}{}$，特殊地，称n=1的轨道半径为玻尔半径
 
+
+
 **氢原子能量**
 
-$E = E_k - E_p = -\frac{1}{n^2}(\frac{me^4}{8\varepsilon_0^2h^2})\ n = 1,2,3,...$，将这些分立的<u>能量值</u>称为**能级**。特殊地，氢原子$E_1 = -13.6eV$
+$E_n = E_k - E_p = -\frac{1}{n^2}(\frac{me^4}{8\varepsilon_0^2h^2})\ n = 1,2,3,...$，(算Ep，然后用E = -1/2 Ep计算)将这些分立的<u>能量值</u>称为**能级**。特殊地，氢原子$E_1 = -13.6eV$
 
 另外显然可以获得$E_n = \frac{E_1}{n^2}{}$
+
+
 
 #### 量子力学描述
 
 **氢原子的定态薛定谔方程**
 
+概率密度：$\varPsi = R(r) \varTheta(\theta) \varPhi(\varphi)$
+
+径向概率密度：$P(r) =$
+
+
+
+**特殊情况：1s轨道**
+
+$\begin{cases} R(r) = \frac{2}{\sqrt{a_0^3}}e^{-r/a_0} \\ \varTheta(\theta) = \frac{1}{\sqrt{2}} \\ \varPhi(\varphi) = \frac{1}{\sqrt{2\pi}} \end{cases}{}$
+
+径向概率密度$P(r) = R^2(r) r^2$
+
 
 
 **量子数**
 
-| 现象                              | 量子数                             | 意义 | 取值                             | Appendix                                              |
-| --------------------------------- | ---------------------------------- | ---- | -------------------------------- | ----------------------------------------------------- |
-|                                   | 主量子数<br />Principle QN         | 能级 | $n = 1, 2, 3, ...$               | 上面那个能量公式                                      |
-|                                   | 角量子数<br />Orbital Angular MQN  | 能层 | $l = 0, 1, ..., (n-1)$           | 第n个能级的电子绕核旋转角动量$L = \sqrt{l(l+1)}\hbar$ |
-| 空间量子化<br />Spacequantization | 磁量子数<br />Magnetic QN          | 轨道 | $m_l = 0, \pm1, \pm2,..., \pm l$ | $L_z = m_l\hbar$                                      |
-|                                   | 自旋量子数<br />Spin QN            |      | $s = \frac12$                    |                                                       |
-|                                   | 自旋磁量子数<br />Spin Magnetic QN | 自旋 | $m_s = \pm\frac12$               |                                                       |
+| 现象                              | 量子数                             | 意义 | 取值                             | Appendix                                                 |
+| --------------------------------- | ---------------------------------- | ---- | -------------------------------- | -------------------------------------------------------- |
+|                                   | 主量子数<br />Principle QN         | 能级 | $n = 1, 2, 3, ...$               | $E_n = -\frac{1}{n^2}(\frac{me^4}{8\varepsilon_0^2h^2})$ |
+|                                   | 角量子数<br />Orbital Angular MQN  | 能层 | $l = 0, 1, ..., (n-1)$           | 第n个能级的电子绕核旋转角动量$L = \sqrt{l(l+1)}\hbar$    |
+| 空间量子化<br />Spacequantization | 磁量子数<br />Magnetic QN          | 轨道 | $m_l = 0, \pm1, \pm2,..., \pm l$ | $L_z = m_l\hbar$                                         |
+|                                   | 自旋量子数<br />Spin QN            |      | $s = \frac12$                    |                                                          |
+|                                   | 自旋磁量子数<br />Spin Magnetic QN | 自旋 | $m_s = \pm\frac12$               |                                                          |
 
