--- a/GP/普物2笔记_电磁.md
+++ b/GP/普物2笔记_电磁.md
@@ -1,5 +1,7 @@
 # 普物笔记
 
+<div align = "right"><b>Powered by CXY</b></div>
+
 [TOC]
 
 ## *Electric
@@ -579,7 +581,7 @@ $$
 
 > 引入磁偶极矩$\vec \mu = Ni \vec A$
 >
-> 一般[磁性物质](https://zh.wikipedia.org/wiki/磁性物質)的磁场，其[泰勒展开](https://zh.wikipedia.org/wiki/泰勒展开)的[多极展开式](https://zh.wikipedia.org/wiki/多極展開式)，由于[磁单极子](https://zh.wikipedia.org/wiki/磁單極子)项目恒等于零，第一个项目是[磁偶极子](https://zh.wikipedia.org/wiki/磁偶極子)项、第二个项目是[磁四极子](https://zh.wikipedia.org/wiki/磁四極子)（quadrupole）项，以此类推。磁矩也分为磁偶极矩、磁四极矩等等部分。从磁矩的磁偶极矩、磁四极矩等等，可以分别计算出磁场的磁偶极子项目、磁四极子项目等等。随着距离的增远，磁偶极矩部分会变得越加重要，成为主要项目，因此，磁矩这术语时常用来指称磁偶极矩。有些教科书内，磁矩的定义与磁偶极矩的定义相同[[1\]](https://zh.wikipedia.org/wiki/磁矩#cite_note-Jackson1999-1)。
+> 一般[磁性物质](https://zh.wikipedia.org/wiki/磁性物質)的磁场，其[泰勒展开](https://zh.wikipedia.org/wiki/泰勒展开)的[多极展开式](https://zh.wikipedia.org/wiki/多極展開式)，由于[磁单极子](https://zh.wikipedia.org/wiki/磁單極子)项目恒等于零，第一个项目是[磁偶极子](https://zh.wikipedia.org/wiki/磁偶極子)项、第二个项目是[磁四极子](https://zh.wikipedia.org/wiki/磁四極子)（quadrupole）项，以此类推。磁矩也分为磁偶极矩、磁四极矩等等部分。从磁矩的磁偶极矩、磁四极矩等等，可以分别计算出磁场的磁偶极子项目、磁四极子项目等等。随着距离的增远，磁偶极矩部分会变得越加重要，成为主要项目，因此，磁矩这术语时常用来指称磁偶极矩。有些教科书内，磁矩的定义与磁偶极矩的定义相同[1](https://zh.wikipedia.org/wiki/磁矩#cite_note-Jackson1999-1)。
 
 在磁场中力矩：$\vec \tau = \vec \mu \times \vec B$
 
@@ -587,13 +589,13 @@ $$
 
 对于圆周运动的电子，$\mu_{orb} = iA = (\frac{e}{2\pi r/v})(\pi r^2) = \frac{evr}2,$
 
-角动量：$(\vec L = \vec r \times \vec p):\ |\vec L_{orb}| = |m(\vec r \times \vec v)| = mrv \\ \therefore \vec \mu_{orb} = -\frac e {2m}\vec L_{orb}$
+角动量：$(\vec L = \vec r \times \vec p):\ |\vec L_{orb}| = |m(\vec r \times \vec v)| = mrv \\ \therefore \vec \mu_{orb} = -\frac e {2m}\vec L_{orb}{}$
 
 ### Ch30 Current – Produced Magnetic Fields 
 
 #### Biot-Savart
 
-$dB = \frac{\mu_0}{4\pi} \frac{i\ dl\ sin\theta}{r^2}	\\	d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2} = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}$
+$dB = \frac{\mu_0}{4\pi} \frac{i\ dl\ sin\theta}{r^2}	\\	d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2} = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}{}$
 
 $\vec r$：电流微元所在点到目标点(求B处)的位移矢量
 
@@ -892,7 +894,7 @@ $c^2 = \frac{1}{\varepsilon_0\mu_0}$
 
 这个偏微分方程的形式与电位移，磁场强度也有关系。此处仅与电场强度和磁感应强度有关的是导出式
 
-$\frac{\partial \vec E}{\partial z} = - \frac{\partial \vec B}{\partial t} \xRightarrow{变化的磁场产生电场} kE_msin(kz-ωt) = \omega B_msin(kz-ωt) \\ \Longrightarrow \frac E B = \frac{E_m}{B_m} = \frac\omega k = c$
+$\frac{\partial \vec E}{\partial z} = - \frac{\partial \vec B}{\partial t} \xrightarrow{变化的磁场产生电场} kE_msin(kz-ωt) = \omega B_msin(kz-ωt) \\ \Longrightarrow \frac E B = \frac{E_m}{B_m} = \frac\omega k = c$
 
 #### Poynting Vector & Intensity
 
