--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -176,6 +176,13 @@ Transmission gate(TG)
 
 #### Canonical Forms
 
+* It is useful to specify Boolean functions in a form that:
+  * Allows comparison for equality.
+  * Has a correspondence to the truth tables
+* Canonical Forms in common usage
+  * Sum of Minterms (SOM)
+  * Product of Maxterms (POM)
+
 ##### Miniterm
 
 denots as m~i~
@@ -933,6 +940,16 @@ EN=0输出Hi-Z，EN为1正常
 1. CPU的寄存器的长度是一个字；
 2. CPU一个指令最多从内存中读取的数据量就是一个字；
 3. 最大的寻址空间，是2^字长（如果一个字是64位，那么最大的寻址空间就是2的64次方）。
+
+**读写操作**
+
+* 写
+  1. 加载地址
+  2. 加载数据
+  3. 激活写入信号
+* 读
+  1. 加载地址
+  2. 激活读出信号
 
 SRAM与DRAM优点对比
 
