--- a/GP/普物2重要公式.md
+++ b/GP/普物2重要公式.md
@@ -87,6 +87,8 @@ q_充(t) = C\varepsilon(1-e^{-\frac t \tau})
 \\
 $$
 
+位移电流：$i_d = \frac{dD}{do}$
+
 ---
 
 ##### 磁学
@@ -163,3 +165,117 @@ $$
 | $\vec D = \varepsilon_0 \vec E + \vec P= \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
 | $\oint \vec D \cdot d \vec A = \sum_{ins}q_0$                | $\oint \vec H \cdot d \vec l = \sum_{ins}i_0$                |
 
+###### 电磁波
+
+---
+
+##### 光学
+
+###### 几何光学
+
+$\displaystyle \frac{1}{v} + \frac{1}{u} = {\frac{1}{f}}$
+
+$\displaystyle \frac{1}{v} + \frac{1}{-u} = {\frac{1}{f}}$
+
+磨镜者公式：$\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$
+
+###### 干涉
+
+双缝：$\begin{cases}x = \pm \frac D d k\lambda \\ x = \pm \frac D d (2k-1)\frac \lambda 2\end{cases}$
+
+
+
+干涉光强：合矢量为$E = E_{0}cos(\omega t + \varphi)$，则有：
+
+* $E_0 = \sqrt{E_{10}^2 + E_{20}^2 + 2E_{10}E_{20}\cos(\varphi_2-\varphi_1)}$（好推的）
+* $\displaystyle \varphi = arctan(\frac{E_{10}\sin\varphi_1 + E_{20}\sin\varphi_2}{E_{10}\cos\varphi_1 + E_{20}\cos\varphi_2})$（好推的，直接拆开即可）
+
+
+
+$I = 4I_0\cos(\frac{\Delta\varphi}{2})$
+
+
+
+**薄膜干涉**：记得半波损失即可
+
+
+
+###### 单缝衍射
+
+半波带法：$\left \{ \begin{array}{lll} \theta = 0 &  & 中央明纹中心 \\ a\sin\theta = \pm 2k\frac{\lambda}{2} & k = 1,2,3,... & 暗纹中心 \\ a\sin\theta = \pm(2k+1)\frac{\lambda}{2} & k = 1,2,3,... & 明纹中心  \end{array} \right.$
+
+光强分布：$\left \{ \begin{array}{lll} \theta = 0  & 中央明纹中心 & \\ \sin\theta = \pm k\frac{\lambda}{a} (k\in \N^+) & 暗纹中心 & 与半波法同解 \\ \tan\alpha = \alpha & 明纹中心 & 不在两暗纹中点 \end{array} \right.$
+
+艾里斑：$\theta = 1.22\frac{\lambda}{D}{}$
+
+单镜望远镜最小能观察到的物件的直径：$\Delta x = f \Delta \theta = 1.22\frac{f\lambda}{2R}{}$，其中f为焦距
+
+定义**分辨率**：$R = \frac{1}{\theta_{min}} = \frac{D}{1.22\lambda}{}$
+
+
+
+###### 光栅衍射
+
+$\Delta\varphi = \frac{2\pi}{\lambda}d\sin\theta$
+
+布拉格方程：2dsinθ=nλ
+
+第k1级单缝衍射暗纹与第k2级光栅衍射主极大重合
+
+$\begin{cases} a\sin\theta = k_1\lambda \\ d\sin\theta = k_2\lambda \end{cases}{} \Longrightarrow k_2 = \pm\frac{d}{a}k_1$时发生**缺级**
+
+
+
+###### 偏振
+
+
+
+**Brewster**：$i = \arctan(n_{21})$
+
+
+
+##### 量子
+
+###### 光电效应
+
+$h\nu = E_{km}+A \Longrightarrow U_a = \frac{h}{e}\nu - \frac{A}{e}{}$
+
+###### 物质波
+
+$h\nu = mc^2$
+
+$p = \frac{h}{\lambda}$
+
+$\begin{cases}\Delta x \Delta p_x \geqslant \frac{h}{4\pi}{} \\ \Delta E \Delta t \geqslant \frac{h}{4\pi}{}\end{cases}$
+
+
+
+$i\hbar \frac{\partial}{\partial t}\Psi(x,t) = [-\frac{\hbar ^2}{2m}(\frac{\partial^2}{\partial x^2}+\frac{\partial^2}{\partial y^2}+\frac{\partial^2}{\partial z^2})+U(x,t)] \Psi(x,t)$
+
+
+
+###### 深势阱
+
+* $A = \sqrt{\frac{2}{L}}$
+* $E_n = n^2 \frac{\pi^2\hbar^2}{2mL^2}{}$
+* 驻波波长$\lambda_n = \frac{2L}{n}{}$
+
+
+
+**量子隧穿**
+
+$T = \exp(-\frac{2}{\hbar}L\sqrt{2m(U_0-E)})$(光强正比于振幅的平方)
+
+
+
+绕核电子形成的德布罗意波长为$\lambda = \frac{h}{mv}$，形成驻波条件为$\lambda = \frac{2\pi r}{n}{}$，联立得到$mvr = n\hbar$
+
+
+
+###### 玻尔半径
+
+$\begin{array}{ll}r_n = n^2\frac{\varepsilon_0 h^2}{\pi me^2} & n=1,2,3,...\end{array}{}$，特殊地，称n=1的轨道半径为玻尔半径
+
+
+
+$E_n = -\frac{1}{n^2}(\frac{me^4}{8\varepsilon_0^2h^2})\ n = 1,2,3,...$，将这些分立的<u>能量值</u>称为**能级**。特殊地，氢原子$E_1 = -13.6eV$
